--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -31,6 +31,8 @@ $background: white !default;
 $primary-color: #0366ee !default;
 $secondary-color: #29de7d !default;
 $accent-color: #cdcdcd !default;
+$green: #1fc844;
+$yellow: #fed356;
 $light: #f2f2f2 !default;
 $alternate-background: #fafafa !default;
 $alternate-color: #404040 !default;
@@ -51,35 +53,36 @@ $body-font-size: 1rem !default;
 $font-style: normal !default;
 $font-variant: normal !default;
 $font-weight: normal !default;
-$font-color: #404040 !default;
-$font-family: -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif !default;
+$font-color: #454545 !default;
+$light-font-color: rgba(0, 0, 0, 0.6);
+$font-family: Helvetica Neue, 'Inter', -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
 $line-height: 1.6 !default;
 
 // Headings
 $heading-font-color: #404040 !default;
 $heading-font-weight: 600 !default;
-$heading-font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial,
-  sans-serif !default;
-$heading-line-height: 1.2 !default;
+$heading-font-family: 'Inter', -apple-system, BlinkMacSystemFont, Helvetica, Arial,
+sans-serif;
+$heading-line-height: 1.3 !default;
 
-$h1-mobile: 1.75rem !default;
-$h2-mobile: 1.5rem !default;
-$h3-mobile: 1.25rem !default;
-$h4-mobile: 1.1rem !default;
-$h5-mobile: 1rem !default;
+$h1-mobile: 1.85rem !default;
+$h2-mobile: 1.7rem !default;
+$h3-mobile: 1.5rem !default;
+$h4-mobile: 1.3rem !default;
+$h5-mobile: 1.2rem !default;
 
-$h1: 2.25rem !default;
-$h2: 2rem !default;
-$h3: 1.75rem !default;
+$h1: 2.5rem !default;
+$h2: 2.1rem !default;
+$h3: 1.85rem !default;
 $h4: 1.5rem !default;
-$h5: 1.25rem !default;
+$h5: 1.4rem !default;
 
 //==============================================================================
 // Spacing
 //==============================================================================
 
-$padding: 1rem !default;
-$margins: 1.5rem !default;
+$padding: 3.75rem !default;
+$margins: 2rem !default;
 $content-padding: 60px 0 !default;
 $content-padding-mobile: 30px 0 !default;
 
@@ -158,3 +161,19 @@ $code-size: 14px !default;
 $code-family: Menlo, monospace !default;
 $code-background: transparent !default;
 $code-borders: $borders !default;
+
+$code-font-family: Menlo, 'Roboto Mono', Courier New, monospace;
+$code-font-color: #b3b9c5;
+$string: #92d192;
+$variable: #f2777a;
+$property: #abb2bf;
+$number: #fca369;
+$operator: #ac8d58;
+$punctuation: #d5d8df;
+$comment: #848991;
+$function: #62cfcf;
+$keyword: #ffeead;
+$attribute: #ffd479;
+$class: #e1a6f2;
+$tag: #6ab0f3;
+$error: #f2777a;
