--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -31,7 +31,7 @@
   
     h1 {
       margin-top: 0;
-      font-weight: 700;
+      font-weight: $heading-font-weight;
       font-size: 2.8rem;
       margin-bottom: 1.5rem;
       letter-spacing: -0.03rem;
