--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -27,7 +27,7 @@
 
 .lead {
     margin: 0 auto;
-    font-size: 1.1rem;
+    font-size: $font-size;
   
     h1 {
       margin-top: 0;
@@ -43,7 +43,7 @@
 
     p {
       color: rgba(0, 0, 0, 0.6);
-      font-size: 1.25rem;
+      font-size: $font-size;
     }
   
     .button {
