--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -1,4 +1,9 @@
 // Media query for mobile first layout
+/* ===============
+ *     Mixins
+ * =============== 
+**/
+
 @mixin small-breakpoint {
     @media (min-width: #{$mobile}) {
         @content;
@@ -7,7 +12,7 @@
 
 // Break on tablet
 @mixin medium-breakpoint {
-    @media (min-width: #{$mobile}) {
+    @media (min-width: #{$tablet}) {
         @content;
     }
 }
