--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -209,6 +209,115 @@
     }
 }
 
+/*
+ * Portolio Projects
+*/
+
+.flex-container {
+  display: flex;
+  flex-wrap: none;
+}
+
+.card {
+  flex: 1 1 50%;
+  position: relative;
+  margin: 10px;
+  border: 1px solid #efefef;
+  line-height: 1.6;
+  box-shadow: 2px 6px 25px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+}
+
+.card:hover {
+  box-shadow: 2px 6px 30px rgba(0, 0, 0, 0.2);
+}
+
+.card-image {
+  height: 200px;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.card-content {
+  padding: 30px 30px 110px;
+}
+
+.card-details {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+}
+
+.card-details-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 1px solid #efefef;
+  margin: 0 30px;
+  padding: 30px 0;
+}
+
+.card h3 {
+  margin: 0;
+  color: #444444;
+}
+
+.card p {
+  margin: 0 0 30px;
+  color: #666666;
+}
+
+a {
+  color: #e76c67;
+  text-decoration: none;
+}
+
+.subtitle {
+  margin: 0 0 15px;
+  font-weight: 700;
+  font-size: 1.25rem;
+  color: #0366ee;
+}
+
+.button {
+  display: block;
+  font-size: 1rem;
+  background: #e76c67;
+  border: 1px solid #e76c67;
+  padding: 0.75rem 1rem;
+  color: white;
+  text-decoration: none;
+  font-weight: 700;
+  text-align: center;
+}
+
+.button:hover,
+.button:focus {
+  background: darken(#e76c67, 10%);
+  border: 1px solid darken(#e76c67, 10%);
+}
+
+.options a {
+  color: #666666;
+}
+
+.options a:hover {
+  color: #222222;
+}
+
+.octicon {
+  margin-right: 0.25rem;
+}
+
+@media (max-width: 760px) {
+  .flex-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
 .callouts {
     display: none;
 }
