--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -2,34 +2,43 @@
 
 #main-content {
     margin-top: 55px;
-    padding: 40px 0 0;
+    padding: 10px 0 0;
     min-height: calc(100vh - 190px);
 }
 
 @include small-breakpoint {
     #main-content {
-      margin-top: 140px;
+      margin-top: 60px;
       padding: 60px 0 0;
       min-height: calc(100vh - 360px);
     }
 }
 
 .container {
-    max-width: $width;
+    max-width: $large;
     padding: 0 1.5rem;
     margin-left: auto;
     margin-right: auto;
+}
+
+.medium-container {
+  max-width: $medium;
+  padding: 0 1.5rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.small-container {
+  max-width: $small;
+  padding: 0 1.5rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @include small-breakpoint {
     .container {
       padding: 0 2rem;
     }
-}
-
-#welcome-section {
-  height: 100vh;
-  overflow: auto;
 }
 
 // Header Section
@@ -368,7 +377,7 @@ a {
 
 .front-page {
     margin-top: 2rem;
-  
+
     h2 {
       display: flex;
       align-items: center;
@@ -389,7 +398,7 @@ a {
         font-size: 1rem;
         font-weight: 500;
         margin: 0.25rem 0 0 2rem;
-  
+
         &:hover,
         &:focus {
           background: darken($light, 5%);
@@ -429,7 +438,6 @@ a {
       }
     }
 }
-
 
 .single-header {
     display: grid;
@@ -1553,4 +1561,101 @@ a {
       display: none;
     }
 }
-  
+
+/*------------------------------------
+  Background Colors
+------------------------------------*/
+.bg-gray-100 {
+  background-color: #f5f8fb;
+}
+
+.bg-black-opacity-0_3 {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.bg-purple-opacity-0_07 {
+  background-color: rgba(121, 110, 255, 0.07);
+}
+
+@media (min-width: 992px) {
+  .bg-lg-transparent {
+    background-color: transparent !important;
+  }
+}
+
+/*------------------------------------
+  Background Image Style
+------------------------------------*/
+.bg-img-hero {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
+}
+
+.bg-img-hero-bottom {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom center;
+}
+
+.bg-img-hero-center {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+/*------------------------------------
+  Background Gradients
+------------------------------------*/
+.gradient-half-primary-v1 {
+  background-image: linear-gradient(25deg, #796eff 0%, #21c87a 100%);
+  background-repeat: repeat-x;
+}
+
+.gradient-half-purple-v1 {
+  background-image: linear-gradient(35deg, #796eff 45%, #1c6be1 100%);
+  background-repeat: repeat-x;
+}
+
+.gradient-light-v1 {
+  background-image: linear-gradient(155deg, #f5f8fb 0%, #fff 50%);
+  background-repeat: repeat-x;
+}
+
+.gradient-light-v2 {
+  background-image: linear-gradient(0deg, #f5f8fb 0%, rgba(255, 255, 255, 0) 25%);
+  background-repeat: repeat-x;
+}
+
+/*------------------------------------
+  Portfolio Hero Banner
+------------------------------------*/
+
+.container.space-2 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+
+  .text-center.mx-auto {
+    text-align: center;
+    margin-left: auto !important;
+    margin-right: auto !important;
+  }
+
+  .mb-5 {
+    margin-bottom: 2rem !important;
+
+    
+  }
+
+  // paragraph-lead p-lead
+  .p-lead, 
+  .text-white {
+    font-size: 1.25rem;
+    font-weight: 300;
+    color: #fff;
+  }
+}
+
+div.gradient-light-v1 {
+  margin-bottom: 50px;
+}
