--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -22,7 +22,7 @@
     .nav-container {
         padding: 0 1.5rem;
         height: 55px;
-        max-width: $width;
+        max-width: $large;
         margin: auto;
         display: flex;
         align-items: center;
@@ -31,52 +31,54 @@
     }
 
     .brand {
-        a {
-          display: flex;
-          align-items: center;
-          color: #333;
-          margin-right: 0;
-          font-weight: 500;
-          font-size: 1.15rem;
-    
-          &:hover,
-          &:focus {
-            color: black;
-          }
+      a {
+        display: flex;
+        align-items: center;
+        color: #333;
+        margin-right: 0;
+        font-weight: 500;
+        font-size: 1.15rem;
+  
+        &:hover,
+        &:focus {
+          color: black;
+          text-decoration: none;
         }
-    
-        .text {
-          display: none;
-        }
+      }
+  
+      .text {
+        display: none;
+      }
     }
 
     .links {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      align-items: center;
+      flex: 1;
+      margin: 0;
+  
+      a {
         display: flex;
-        flex-direction: row;
-        justify-content: center;
         align-items: center;
-        flex: 1;
-        margin: 0;
-    
-        a {
-          display: flex;
-          align-items: center;
-          font-size: 1.05rem;
-          font-weight: 400;
-          padding: 0.75rem;
-          margin: 0 .25rem;
-          color: rgba(0, 0, 0, 0.6);
-          line-height: 1.2;
-          text-align: center;
-          border-radius: $border-radius;
-    
-          &:hover,
-          &:active,
-          &.active {
-            color: #111;
-            background: rgba(0, 0, 0, 0.05);
-          }
+        font-size: 1.05rem;
+        font-weight: 400;
+        padding: 0.75rem;
+        margin: 0 .25rem;
+        color: rgba(0, 0, 0, 0.6);
+        line-height: 1.2;
+        text-align: center;
+        border-radius: $border-radius;
+  
+        &:hover,
+        &:active,
+        &.active {
+          color: #111;
+          background: rgba(0, 0, 0, 0.05);
+          text-decoration: none;
         }
+      }
     }
 }
 
@@ -107,65 +109,65 @@ button.dark-switcher {
     margin-bottom: 0;
 }
 
-@include small-breakpoint {
-    .nav {
-      &.scroll {
-        .nav-container {
-          height: 60px;
-        }
-      }
-  
+@media (min-width: 660px) {
+  .nav {
+    &.scroll {
       .nav-container {
-        height: 160px;
-        padding: 0 2rem;
-      }
-  
-      .brand {
-        a {
-          font-size: 1.3rem;
-        }
-  
-        .text {
-          display: block;
-        }
-      }
-  
-      .links {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
-        height: 100%;
-  
-        a {
-          font-size: 1.2rem;
-          margin: 0 0.5rem;
-          padding: 1rem;
-          border-bottom: 2px solid transparent;
-        }
-      }
-  
-      .favicon {
-        margin-right: 1rem;
-      }
-  
-      button.dark-switcher {
-        margin: 0;
-        font-size: 1.4rem;
-        padding: 0.75rem 1rem;
-      }
-  
-      .theme-icon {
-        height: 22px;
-        width: 22px;
-        min-width: 22px;
-        margin-bottom: 0;
+        height: 60px;
       }
     }
-  
-    @media print {
-      .nav {
-        display: none;
+
+    .nav-container {
+      height: 80px;
+      padding: 0 2rem;
+    }
+
+    .brand {
+      a {
+        font-size: 1.3rem;
+      }
+      
+      .text {
+        display: block;
       }
     }
+
+    .links {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      height: 100%;
+
+      a {
+        font-size: 1.2rem;
+        margin: 0 0.5rem;
+        padding: 1rem;
+        border-bottom: 2px solid transparent;
+      }
+    }
+
+    .favicon {
+      margin-right: 1rem;
+    }
+
+    button.dark-switcher {
+      margin: 0;
+      font-size: 1.4rem;
+      padding: 0.75rem 1rem;
+    }
+
+    .theme-icon {
+      height: 22px;
+      width: 22px;
+      min-width: 22px;
+      margin-bottom: 0;
+    }
+  }
+
+  @media print {
+    .nav {
+      display: none;
+    }
+  }
 }
   
